dataset/1.code_smell_tf_file/unrestricted_ip_address/t_sample26.tf
resource "aws_security_group" "load_balancer" {
  name        = "load-balancer-security-group"
  description = "controls access to the load balancer, http will be redirected to https"
  vpc_id      = aws_vpc.main.id

  ingress {
    protocol    = "tcp"
    from_port   = 80
    to_port     = 80
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    protocol    = "tcp"
    from_port   = 443
    to_port     = 443
    cidr_blocks = ["0.0.0.0/0"]
  }
}
